--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "ember-test",
+  "name": "trip-treasure-hunt-emberconf",
   "dependencies": {
     "jquery": "^1.11.1",
-    "ember": "1.10.0",
+    "ember": "1.11.0-beta.1",
     "ember-data": "1.0.0-beta.15",
     "ember-resolver": "~0.1.11",
     "loader.js": "ember-cli/loader.js#1.0.1",
@@ -11,6 +11,14 @@
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2",
     "ember-qunit": "0.2.8",
     "ember-qunit-notifications": "0.0.7",
-    "qunit": "~1.17.1"
+    "qunit": "~1.17.1",
+    "polymer": "Polymer/polymer#~0.5.4",
+    "core-elements": "Polymer/core-elements#~0.5.4",
+    "paper-elements": "Polymer/paper-elements#~0.5.4",
+    "moment": "~2.8.1",
+    "fontawesome": "~4.2.0",
+    "hammerjs": "1.1.3",
+    "ember-hammer": "~1.0.0",
+    "fastclick": "~1.0.6"
   }
 }
