--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.0",
+    "broccoli-merge-trees": "^0.2.0",
+    "broccoli-sass": "^0.2.1",
+    "broccoli-static-compiler": "^0.1.4",
+    "broccoli-vulcanize": "1.0.4",
     "ember-cli": "0.2.0-beta.1",
-    "ember-cli-babel": "^4.0.0",
     "ember-cli-app-version": "0.3.1",
-    "ember-cli-content-security-policy": "0.3.0",
+    "ember-cli-babel": "^4.0.0",
     "ember-cli-dependency-checker": "0.0.7",
+    "ember-cli-fastclick": "^1.0.3",
     "ember-cli-htmlbars": "0.7.4",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
